# mentoring

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
backend/: entrypoint.sh  pytest.ini  run_celery.sh
backend/app/: models.py  serializers.py  urls.py  views.py
backend/app/migrations/: 0001_initial.py  0002_alter_user_age.py
backend/backend/: settings.py  urls.py
backend/tests/: conftest.py  factories.py
backend/tests/api/: test_api.py
backend/tests/book/: test_books.py
backend/tests/user/: test_users.py
